#
# @brief
# This file is part of the MeetiX Operating System.
# Copyright (c) 2017-2021, Marco Cicognani (marco.cicognani@meetixos.org)
#
# @developers
# Marco Cicognani (marco.cicognani@meetixos.org)
#
# @license
# GNU General Public License version 3
#

add_library(LibC
        STATIC
        stdio/rewind.cc
        stdio/parse_mode_flags.cc
        stdio/ftell.cc
        stdio/perror.cc
        stdio/popen.cc
        stdio/tmpfile.cc
        stdio/fseterr.cc
        stdio/fflush.cc
        stdio/fputs.cc
        stdio/fgetpos.cc
        stdio/printf.cc
        stdio/sprintf.cc
        stdio/ftello_unlocked.cc
        stdio/setbuf.cc
        stdio/vfprintf.cc
        stdio/fread.cc
        stdio/stdio_impl_fileno.cc
        stdio/stdio.cc
        stdio/vprintf.cc
        stdio/fopen.cc
        stdio/fprintf.cc
        stdio/fflush_write_unlocked.cc
        stdio/fgets.cc
        stdio/stdio_impl_seek.cc
        stdio/rename.cc
        stdio/freopen.cc
        stdio/stdio_impl_close.cc
        stdio/fclose.cc
        stdio/vsprintf.cc
        stdio/fdopen_static.cc
        stdio/fopen_static.cc
        stdio/getchar.cc
        stdio/fputc_unlocked.cc
        stdio/fgetc_unlocked.cc
        stdio/putchar.cc
        stdio/puts.cc
        stdio/setvbuf_unlocked.cc
        stdio/remove.cc
        stdio/fflush_write.cc
        stdio/vsnprintf.cc
        stdio/setdefbuf_unlocked.cc
        stdio/fgetc.cc
        stdio/fclose_static.cc
        stdio/ungetc.cc
        stdio/stdio_impl_read.cc
        stdio/stdio_impl_eof.cc
        stdio/pclose.cc
        stdio/stdio_impl_clearerr.cc
        stdio/fflush_unlocked.cc
        stdio/fclose_static_unlocked.cc
        stdio/putc.cc
        stdio/stdio_impl_seterr.cc
        stdio/klog.cc
        stdio/fflush_read.cc
        stdio/fileno.cc
        stdio/fread_unlocked.cc
        stdio/stdio_impl_tell.cc
        stdio/setvbuf.cc
        stdio/tmpnam.cc
        stdio/snprintf.cc
        stdio/ferror.cc
        stdio/fdopen.cc
        stdio/fungetc.cc
        stdio/readline.cc
        stdio/feof.cc
        stdio/stdio_impl_error.cc
        stdio/fputc.cc
        stdio/fflush_read_unlocked.cc
        stdio/open_file_list.cc
        stdio/vcbprintf.cc
        stdio/vfprintf_unlocked.cc
        stdio/fscanf.cc
        stdio/stdio_impl_write.cc
        stdio/sscanf.cc
        stdio/stdio_impl_reopen.cc
        stdio/clearerr.cc
        stdio/getc.cc
        stdio/kvlog.cc
        stdio/cbprintf.cc
        stdio/clearerr_unlocked.cc
        stdio/println.cc
        stdio/fwrite.cc
        stdio/fungetc_unlocked.cc
        stdio/fseek.cc
        stdio/fseeko_unlocked.cc
        stdio/fsetpos.cc
        stdio/fwrite_unlocked.cc
        libc_main.cc
        signal/raise.cc
        signal/sig_handlers.cc
        signal/signal.cc
        musl/math/lroundl.cc
        musl/math/jn.cc
        musl/math/floor.cc
        musl/math/nexttowardf.cc
        musl/math/log1p.cc
        musl/math/finitef.cc
        musl/math/roundl.cc
        musl/math/fminf.cc
        musl/math/fdim.cc
        musl/math/__rem_pio2l.cc
        musl/math/log1pl.cc
        musl/math/hypot.cc
        musl/math/roundf.cc
        musl/math/tgamma.cc
        musl/math/lroundf.cc
        musl/math/nexttowardl.cc
        musl/math/fminl.cc
        musl/math/ceil.cc
        musl/math/__rem_pio2f.cc
        musl/math/log1pf.cc
        musl/math/__tanl.cc
        musl/math/fmod.cc
        musl/math/scalbn.cc
        musl/math/logb.cc
        musl/math/asinhf.cc
        musl/math/lgamma.cc
        musl/math/hypotl.cc
        musl/math/ldexpl.cc
        musl/math/expf.cc
        musl/math/frexp.cc
        musl/math/cbrt.cc
        musl/math/modff.cc
        musl/math/acoshf.cc
        musl/math/asinhl.cc
        musl/math/__tan.cc
        musl/math/hypotf.cc
        musl/math/ldexpf.cc
        musl/math/significand.cc
        musl/math/expl.cc
        musl/math/sqrt.cc
        musl/math/__cosl.cc
        musl/math/modfl.cc
        musl/math/acoshl.cc
        musl/math/__cos.cc
        musl/math/atanh.cc
        musl/math/fabs.cc
        musl/math/ilogbf.cc
        musl/math/fmin.cc
        musl/math/fabsf.cc
        musl/math/tanl.cc
        musl/math/asinf.cc
        musl/math/fmaxl.cc
        musl/math/j0.cc
        musl/math/remquof.cc
        musl/math/ilogb.cc
        musl/math/sinh.cc
        musl/math/remquo.cc
        musl/math/asin.cc
        musl/math/ilogbl.cc
        musl/math/scalb.cc
        musl/math/__tandf.cc
        musl/math/tanf.cc
        musl/math/asinl.cc
        musl/math/fmaxf.cc
        musl/math/remquol.cc
        musl/math/nearbyint.cc
        musl/math/fabsl.cc
        musl/math/pow.cc
        musl/math/remainder.cc
        musl/math/log2l.cc
        musl/math/lgammaf_r.cc
        musl/math/fdimf.cc
        musl/math/sinhf.cc
        musl/math/floorl.cc
        musl/math/acosh.cc
        musl/math/ldexp.cc
        musl/math/coshf.cc
        musl/math/signgam.cc
        musl/math/cosl.cc
        musl/math/exp10f.cc
        musl/math/erf.cc
        musl/math/expm1f.cc
        musl/math/floorf.cc
        musl/math/j1.cc
        musl/math/rint.cc
        musl/math/log10.cc
        musl/math/scalbf.cc
        musl/math/log2f.cc
        musl/math/fdiml.cc
        musl/math/sinhl.cc
        musl/math/sin.cc
        musl/math/cosf.cc
        musl/math/exp10l.cc
        musl/math/lgamma_r.cc
        musl/math/__rem_pio2_large.cc
        musl/math/expm1l.cc
        musl/math/exp2.cc
        musl/math/nexttoward.cc
        musl/math/__rem_pio2.cc
        musl/math/coshl.cc
        musl/math/rintl.cc
        musl/math/fmodf.cc
        musl/math/log2.cc
        musl/math/__expo2f.cc
        musl/math/lgammal.cc
        musl/math/__polevll.cc
        musl/math/exp2l.cc
        musl/math/scalblnl.cc
        musl/math/truncl.cc
        musl/math/acosf.cc
        musl/math/__fpclassifyl.cc
        musl/math/tgammal.cc
        musl/math/logbl.cc
        musl/math/sincosl.cc
        musl/math/cosh.cc
        musl/math/lgammaf.cc
        musl/math/__sindf.cc
        musl/math/log.cc
        musl/math/rintf.cc
        musl/math/fmodl.cc
        musl/math/copysign.cc
        musl/math/acosl.cc
        musl/math/tgammaf.cc
        musl/math/__fpclassifyf.cc
        musl/math/modf.cc
        musl/math/sincosf.cc
        musl/math/logbf.cc
        musl/math/__cosdf.cc
        musl/math/exp10.cc
        musl/math/scalblnf.cc
        musl/math/exp2f.cc
        musl/math/truncf.cc
        musl/math/tan.cc
        musl/math/ceill.cc
        musl/math/scalbln.cc
        musl/math/significandf.cc
        musl/math/asinh.cc
        musl/math/tanhf.cc
        musl/math/j0f.cc
        musl/math/cbrtl.cc
        musl/math/lrint.cc
        musl/math/sinl.cc
        musl/math/atanf.cc
        musl/math/log10l.cc
        musl/math/tanh.cc
        musl/math/__signbit.cc
        musl/math/__invtrigl.cc
        musl/math/tanhl.cc
        musl/math/ceilf.cc
        musl/math/atan.cc
        musl/math/sinf.cc
        musl/math/__fpclassify.cc
        musl/math/atanl.cc
        musl/math/log10f.cc
        musl/math/j1f.cc
        musl/math/round.cc
        musl/math/cbrtf.cc
        musl/math/sqrtl.cc
        musl/math/fmaf.cc
        musl/math/__signbitf.cc
        musl/math/nearbyintf.cc
        musl/math/__expo2.cc
        musl/math/fma.cc
        musl/math/trunc.cc
        musl/math/logl.cc
        musl/math/lrintl.cc
        musl/math/atan2l.cc
        musl/math/nextafterl.cc
        musl/math/llroundl.cc
        musl/math/erff.cc
        musl/math/acos.cc
        musl/math/frexpl.cc
        musl/math/llrintl.cc
        musl/math/nearbyintl.cc
        musl/math/sqrtf.cc
        musl/math/expm1.cc
        musl/math/fmal.cc
        musl/math/__signbitl.cc
        musl/math/nextafterf.cc
        musl/math/frexpf.cc
        musl/math/llroundf.cc
        musl/math/erfl.cc
        musl/math/llrintf.cc
        musl/math/__sin.cc
        musl/math/logf.cc
        musl/math/nan.cc
        musl/math/lrintf.cc
        musl/math/atan2f.cc
        musl/math/nanf.cc
        musl/math/scalbnl.cc
        musl/math/copysignl.cc
        musl/math/llrint.cc
        musl/math/atanhf.cc
        musl/math/sincos.cc
        musl/math/powl.cc
        musl/math/jnf.cc
        musl/math/cos.cc
        musl/math/remainderf.cc
        musl/math/exp.cc
        musl/math/finite.cc
        musl/math/atanhl.cc
        musl/math/lround.cc
        musl/math/atan2.cc
        musl/math/copysignf.cc
        musl/math/llround.cc
        musl/math/nanl.cc
        musl/math/scalbnf.cc
        musl/math/__sinl.cc
        musl/math/nextafter.cc
        musl/math/powf.cc
        musl/math/fmax.cc
        musl/math/remainderl.cc
        musl/complex/casin.cc
        musl/complex/cpow.cc
        musl/complex/csinh.cc
        musl/complex/cabsf.cc
        musl/complex/ctanf.cc
        musl/complex/cabsl.cc
        musl/complex/ctanl.cc
        musl/complex/ccosf.cc
        musl/complex/csin.cc
        musl/complex/__cexp.cc
        musl/complex/cimag.cc
        musl/complex/ccosl.cc
        musl/complex/crealf.cc
        musl/complex/casinl.cc
        musl/complex/catanh.cc
        musl/complex/creall.cc
        musl/complex/casinf.cc
        musl/complex/cexpl.cc
        musl/complex/csinhl.cc
        musl/complex/catanhf.cc
        musl/complex/csqrt.cc
        musl/complex/ccoshl.cc
        musl/complex/catanhl.cc
        musl/complex/csinhf.cc
        musl/complex/cexpf.cc
        musl/complex/cacosh.cc
        musl/complex/ccoshf.cc
        musl/complex/cargl.cc
        musl/complex/clogf.cc
        musl/complex/cacosl.cc
        musl/complex/cabs.cc
        musl/complex/cargf.cc
        musl/complex/creal.cc
        musl/complex/conj.cc
        musl/complex/cacos.cc
        musl/complex/clogl.cc
        musl/complex/cacosf.cc
        musl/complex/ctanhl.cc
        musl/complex/casinhf.cc
        musl/complex/cprojf.cc
        musl/complex/catanl.cc
        musl/complex/cacoshf.cc
        musl/complex/cpowf.cc
        musl/complex/ccos.cc
        musl/complex/casinhl.cc
        musl/complex/ctanhf.cc
        musl/complex/casinh.cc
        musl/complex/cexp.cc
        musl/complex/cprojl.cc
        musl/complex/catanf.cc
        musl/complex/cacoshl.cc
        musl/complex/cpowl.cc
        musl/complex/ctan.cc
        musl/complex/ccosh.cc
        musl/complex/cimagl.cc
        musl/complex/csqrtf.cc
        musl/complex/clog.cc
        musl/complex/cimagf.cc
        musl/complex/csqrtl.cc
        musl/complex/__cexpf.cc
        musl/complex/cproj.cc
        musl/complex/ctanh.cc
        musl/complex/conjl.cc
        musl/complex/carg.cc
        musl/complex/csinf.cc
        musl/complex/catan.cc
        musl/complex/conjf.cc
        musl/complex/csinl.cc
        strings/strncasecmp.cc
        strings/strcasecmp.cc
        stdlib/abort.cc
        stdlib/strtod.cc
        stdlib/parse_cli_args.cc
        stdlib/atoi.cc
        stdlib/setenv.cc
        stdlib/mbstowcs.cc
        stdlib/strtoul.cc
        stdlib/strtof.cc
        stdlib/div.cc
        stdlib/bsearch.cc
        stdlib/rand.cc
        stdlib/strtol.cc
        stdlib/mktemp.cc
        stdlib/lldiv.cc
        stdlib/ldiv.cc
        stdlib/qsort.cc
        stdlib/exit.cc
        stdlib/System.cc
        stdlib/getenv.cc
        stdlib/atol.cc
        stdlib/atof.cc
        string/strxfrm.cc
        string/strcoll.cc
        string/memcpy.cc
        string/strdup.cc
        string/memset.cc
        string/memmem.cc
        string/strncpy.cc
        string/strcpy.cc
        string/strlen.cc
        string/strpbrk.cc
        string/strerror.cc
        string/memmove.cc
        string/memchr.cc
        string/memcmp.cc
        string/strchr.cc
        string/strcspn.cc
        string/strncmp.cc
        string/strcmp.cc
        string/strrchr.cc
        string/strncat.cc
        string/strcat.cc
        string/strstr.cc
        string/strspn.cc
        dlfcn/dlerror.cc
        unistd/write.cc
        unistd/tell.cc
        unistd/lseek.cc
        unistd/rmdir.cc
        unistd/isatty.cc
        unistd/read.cc
        unistd/getcwd.cc
        unistd/access.cc
        getopt/getopt.cc
        getopt/OptionsParser.cc
        unistd/close.cc
        unistd/getppid.cc
        unistd/symlink.cc
        unistd/sleep.cc
        unistd/environ.cc
        unistd/fcntl.cc
        unistd/sbrk.cc
        unistd/chdir.cc
        unistd/getpid.cc
        dirent/closedir.cc
        dirent/opendir.cc
        dirent/readdir.cc
        abi_support.cc
        ctype.cc
        time/ctime.cc
        time/difftime.cc
        time/mktime.cc
        time/gmtime.cc
        time/clock.cc
        time/strptime.cc
        time/localtime.cc
        time/strftime.cc
        time/time.cc
        assert.cc
        errno/errno.cc
        locale/localeconv.cc
        locale/setlocale.cc
        malloc/dlmalloc.c
        fcntl/open.cc
        libgen/basename.cc
        libgen/dirname.cc
        sched/sched_yield.cc
        sys/time/gettimeofday.cc
        sys/param/getwd.cc
        sys/stat/mkdir.cc
        sys/stat/stat.cc
        sys/stat/fstat.cc
        sys/stat/umask.cc
        sys/stat/lstat.cc
        sys/stat/chmod.cc
        setjmp/i386/setjmp.s
        setjmp/i386/longjmp.s
        musl/math/i386/remquof.s
        musl/math/i386/asinf.s
        musl/math/i386/ldexpf.s
        musl/math/i386/hypotf.s
        musl/math/i386/fabsf.s
        musl/math/i386/remquol.s
        musl/math/i386/fmod.s
        musl/math/i386/ceil.s
        musl/math/i386/fabsl.s
        musl/math/i386/asinl.s
        musl/math/i386/ldexpl.s
        musl/math/i386/scalbn.s
        musl/math/i386/ldexp.s
        musl/math/i386/log1pf.s
        musl/math/i386/log2l.s
        musl/math/i386/expf.s
        musl/math/i386/log10.s
        musl/math/i386/log1pl.s
        musl/math/i386/log2f.s
        musl/math/i386/sqrt.s
        musl/math/i386/expl.s
        musl/math/i386/exp.s
        musl/math/i386/log.s
        musl/math/i386/log1p.s
        musl/math/i386/expm1l.s
        musl/math/i386/floor.s
        musl/math/i386/fabs.s
        musl/math/i386/floorf.s
        musl/math/i386/expm1f.s
        musl/math/i386/hypot.s
        musl/math/i386/floorl.s
        musl/math/i386/asin.s
        musl/math/i386/scalblnl.s
        musl/math/i386/remquo.s
        musl/math/i386/exp2.s
        musl/math/i386/scalblnf.s
        musl/math/i386/rint.s
        musl/math/i386/trunc.s
        musl/math/i386/remainderl.s
        musl/math/i386/llrintl.s
        musl/math/i386/sqrtl.s
        musl/math/i386/log10f.s
        musl/math/i386/log2.s
        musl/math/i386/sqrtf.s
        musl/math/i386/expm1.s
        musl/math/i386/llrintf.s
        musl/math/i386/log10l.s
        musl/math/i386/remainderf.s
        musl/math/i386/truncf.s
        musl/math/i386/scalbnl.s
        musl/math/i386/atan2.s
        musl/math/i386/truncl.s
        musl/math/i386/atan.s
        musl/math/i386/scalbnf.s
        musl/math/i386/acos.s
        musl/math/i386/rintl.s
        musl/math/i386/logl.s
        musl/math/i386/fmodf.s
        musl/math/i386/acosf.s
        musl/math/i386/exp2l.s
        musl/math/i386/__invtrigl.s
        musl/math/i386/rintf.s
        musl/math/i386/logf.s
        musl/math/i386/fmodl.s
        musl/math/i386/exp2f.s
        musl/math/i386/acosl.s
        musl/math/i386/llrint.s
        musl/math/i386/remainder.s
        musl/math/i386/atan2f.s
        musl/math/i386/lrintf.s
        musl/math/i386/ceill.s
        musl/math/i386/atanf.s
        musl/math/i386/lrint.s
        musl/math/i386/scalbln.s
        musl/math/i386/ceilf.s
        musl/math/i386/atan2l.s
        musl/math/i386/lrintl.s
        musl/math/i386/atanl.s
        dlfcn/dlopen.cc
        dlfcn/dlsym.cc
        dlfcn/dlclose.cc
        pthread/pthread_create.cc
        pthread/pthread_attr_init.cc
        pthread/pthread_attr_destroy.cc
        pthread/pthread_set_detachstate.cc
        pthread/pthread_join.cc
        pthread/pthread_self.cc
        pthread/pthread_kill.cc
        pthread/pthread_exit.cc
        sys/stat/fchmod.cc)

target_compile_options(LibC PRIVATE -Wno-narrowing)

target_include_directories(LibC PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/musl)
add_custom_command(
        TARGET LibC
        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:LibC> ${TOOLCHAIN_ROOT}/lib/libc.a
        COMMAND ${CMAKE_AR} cr ${TOOLCHAIN_ROOT}/lib/libm.a
)
