#
# @brief
# This file is part of the MeetiX Operating System.
# Copyright (c) 2017-2021, Marco Cicognani (marco.cicognani@meetixos.org)
#
# @developers
# Marco Cicognani (marco.cicognani@meetixos.org)
#
# @license
# GNU General Public License version 3
#

add_subdirectory(Terminal)

# Disabled until new Compositor is finished
#add_subdirectory(Calculator)
#add_subdirectory(CandyNote)
#add_subdirectory(CandyShell)
#add_subdirectory(Exec)
#add_subdirectory(Gurf)
#add_subdirectory(MXLogin)
#add_subdirectory(OsmosUI)
#add_subdirectory(UITweak)
#add_subdirectory(Welcome)
