set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Copy)
add_subdirectory(CpuDetect)
add_subdirectory(Echo)
add_subdirectory(FileId)
add_subdirectory(Find)
add_subdirectory(GuiNotify)
add_subdirectory(GZip)
add_subdirectory(Idle)
add_subdirectory(Kill)
add_subdirectory(List)
add_subdirectory(ListPCI)
add_subdirectory(ListProcs)
add_subdirectory(ListThreads)
add_subdirectory(Login)
add_subdirectory(MxSh)
add_subdirectory(Power)
add_subdirectory(Read)
add_subdirectory(Stress)
add_subdirectory(SysFetch)
add_subdirectory(Write)
add_subdirectory(LibTCTests)