#
# @brief
# This file is part of the MeetiX Operating System.
# Copyright (c) 2017-2021, Marco Cicognani (marco.cicognani@meetixos.org)
#
# @developers
# Marco Cicognani (marco.cicognani@meetixos.org)
#
# @license
# GNU General Public License version 3
#

#add_subdirectory(Copy)
#add_subdirectory(CpuDetect)
#add_subdirectory(Echo)
#add_subdirectory(FileId)
#add_subdirectory(Find)
#add_subdirectory(GuiNotify)
#add_subdirectory(GZip)
add_subdirectory(Idle)
#add_subdirectory(Kill)
#add_subdirectory(List)
#add_subdirectory(ListPCI)
#add_subdirectory(ListProcs)
#add_subdirectory(ListThreads)
add_subdirectory(Login)
add_subdirectory(MxSh)
#add_subdirectory(Power)
#add_subdirectory(Read)
#add_subdirectory(Stress)
#add_subdirectory(SysFetch)
#add_subdirectory(Write)
